z-index fixed for modals and modified roadmap

--- a/src/plugins/felixhayashi/taskgraph/files/layout.scss
+++ b/src/plugins/felixhayashi/taskgraph/files/layout.scss
@@ -28,6 +28,7 @@
 }
 
 .tc-modal-wrapper {
+  z-index: 1010; // fix this in core?
 
   .tc-modal-header {
     padding-top: 0px;
